<resources>
    <string name="app_name">GPS测速</string>
    <string name="starting_the_app">Starting SpeedView</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="searching_for_satellites">Searching for satellites</string>
    <string name="no_satellites_found">0 satellites found</string>
    <string name="waiting_for_gps_fix">Waiting for GPS fix</string>
    <string name="satellites_found">satellites found</string>
    <string name="satellite_found">satellite found</string>
    <string name="satellites_tip">It may take a while for the GPS to locate the satellites. Make sure that you are outside and your phone has a clear view of the sky.</string>
    <string name="gps_readings_tip">To improve GPS readings, move away from tall buildings, trees or overhead obstructions.</string>
    <string name="gps_signal_weak">GPS signal is weak.</string>
    <string name="gps_signal_not_available">GPS signal is weak or not available.</string>
    <string name="orientation">Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="reverse_landscape">Reverse landscape</string>
    <string name="speed_limit">Speed limit</string>
    <string name="urban_area">Urban area</string>
    <string name="highway">Highway</string>
    <string name="freeway">Freeway</string>
    <string name="turn_off">Turn off</string>
    <string name="dashboard">Dashboard</string>
    <string name="startup">Startup</string>
    <string name="main">Main</string>
    <string name="compass">Compass</string>
    <string name="hud_view">HUD view</string>
    <string name="zoom_view">Zoom view</string>
    <string name="advanced">Advanced</string>
    <string name="clear_data">Clear data</string>
    <string name="odometer_time">Odometer / Time traveled</string>
    <string name="max_speed">Max speed</string>
    <string name="accl_times">Acceleration times</string>
    <string name="graph">Graph</string>
    <string name="all">All</string>
    <string name="minimize">Minimize</string>
    <string name="exit">Exit</string>
    <string name="share_location">Share location</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="featured_apps">Featured apps</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="ok">OK</string>
    <string name="version">Version</string>
    <string name="startup_text_pro"><b>Can I use it without a GPS connection?</b>"

Yes, you can review your saved data, use the compass and export your tracks as GPX files. Just tap on the startup screen to skip it.

"<b>How does the compass work?</b>"

When you are moving slower than 3 mph (about 5 km/h) the phone's orientation sensor is used to determine your heading. If you are moving faster than that the GPS is used to determine your heading.

"<b>What is HUD? How do I use it?</b>"

HUD stands for \"head-up display\" and was initially developed for military aviation. In this app, the HUD mode allows you to put your device on your car's dashboard and see the speed reflected in the front glass. This can be useful when driving at night.

"<b>The speedometer stops at 150 mph. Why?</b>"

Because of the \"Narrow speed range\" option that is used to suppress outliers (spikes) in the GPS data, so you will not have erratic top speed numbers (like 345 mph or higher) popping out of nowhere due to GPS errors. This option is turned on by default. You can disable it any time in the app's settings.

"<b>Why does it take so long to get a GPS fix?</b>"

The time required to get a GPS fix is dependent on the number of satellites in view and reception strength of each GPS satellite. This process normally takes 1-2 minutes, however you should not worry if it takes up to 20 minutes on the first occasion. If the receiver in your device will still not acquire a fix, you might want to restart your device. Also note that GPS will not work through heated or heat reflective windscreens. This is due to a metal layer in them which stops the signal.

"<b>The app lags, off by a few mph, etc.</b>"

GPS accuracy depends on a number of factors, most notably signal to noise ratio, satellite position, atmospheric conditions and obstructions of satellite signals. These factors can create errors in your perceived location. For example, objects such as buildings or mountains between the satellite and the receiver can produce an error up to 30 meters.

"<b>It drains the battery. Can you add a powersafe mode, only query GPS speed?</b>"

No, that is not how GPS works. In basic terms, GPS satellites send out an identifying signal, a GPS receiver picks up that signal and then the software can determine things such as longitude and latitude, direction, speed, etc.

"<b>How does the track logging feature work?</b>"

It generates a separate log file for each day that you use the app with the track logging option turned on. After a while, SpeedView erases the outdated log files, leaving only the most recent three. When exporting, you will be presented with a choice of which one to convert to the GPX format.

"<b>How often does SpeedView refresh the address in the Pro version?</b>"

Every 100 meters if you are moving slower than 35 mph (about 60 km/h), or every 1000 meters if you are moving faster than that."</string>
    <string name="about_this_release">About this release</string>
    <string name="release_info">This is a major update that adds some often requested features, such as a widget and an ability to quickly tweak speed limits. Please make sure to read the section below for a brief overview of how the widget works.</string>
    <string name="whats_new">"What's new"</string>
    <string name="whats_new_info_pro">"• Simple text widget (4x1)
• Quickly adjust speed limits
• Improved background service
• More color customization
• Other minor improvements"</string>
    <string name="help_title">Quick help</string>
    <string name="help_text">If you are a new user or experiencing difficulties, we strongly recommend reading the <b>FAQ</b>" first. You can view it by tapping on the corresponding button in the bottom right corner of the screen.

To switch between landscape and portrait modes, use the "<b>Orientation</b>" button under the Options menu. The screen orientation will be restored next time you start SpeedView.

To switch to the "<b>Compass</b> mode, tap once on the linear compass. To enter the <b>HUD mode</b>, tap anywhere on the speedometer area. To quickly reset the <b>odometer</b> or <b>maximum speed</b> to zero, tap on the corresponding field. To open the <b>Advanced</b> screen, tap on the speed graph. You can find the corresponding buttons if you open the Options menu and select <b>Dashboard</b>". To return to default view while in one of these modes, tap anywhere on the screen. You can also use the Back button to return to main screen.

To quickly switch between speed limits, "<b>long-tap</b>" anywhere on one of the main dashboards (excluding Advanced) to select a different speed limit. Then long-tap anywhere on that screen (or use the regular \"Back\" button) to confirm your changes and return to the previous dashboard.

To reset odometer and time traveled, maximum speed, speed graph or all data at once, tap the "<b>Reset data</b>" button.

To change display units, define speed limits, set sound alert, minimum accuracy and other preferences, use the "<b>Settings</b>" menu item.

If you want to use the app without a GPS connection, tap anywhere on the Startup screen to skip it. Note that you can pause the recording of the GPS data anytime by going to the "<b>Advanced</b> dashboard, then tapping on the <b>Stop recording</b>" button.

In case you are experiencing an erratic speed issue or the program freezes after acquiring a GPS fix, try setting the "<b>minimum accuracy</b>" value to 50 meters to ignore most inaccurate data.

If there are any other problems, please do not hesitate to submit a ticket or contact us directly at "<i>speedview@codesector.com</i>.</string>
    <string name="read_the_faq">Read the FAQ</string>
    <string name="faq_title">FAQ</string>
    <string name="back">Back</string>
    <string name="about_title">About SpeedView</string>
    <string name="about_text">"SpeedView is an advanced speedometer application that uses the phone's GPS location to calculate speed and distance traveled. Some of the features include: compass, HUD mode, speed graph, maximum and average speed, time traveled, speed warning, background mode, GPX track export and more. This app is suitable for running, car driving, biking or hiking.

Please note that the accuracy of speed readings depends on your GPS reception quality, which can be affected by a multitude of error-introducing factors.

In addition, note that this application is not optimized to run on 7-inch tablets or devices with uncommon screen resolutions. You will be able to run and use it, but it may not display properly. If you have any questions or comments, feel free to post them on our blog.

We would also like to indicate that we reserve the right to anonymously track and report a user's activity inside of SpeedView. We use this data to better understand and improve how this app is being used. If you have any questions or comments, feel free to post them on our blog or send us an email directly using the button below. Your feedback is important to us.

"<i>Thank you for using this app.</i>"

"<b>Copyright © 2010-2012 Code Sector</b></string>
    <string name="send_us_email">Send us email</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_text_pro"><b>Version 2.9 - Feb 5, 2012</b>"

• Simple text widget (4x1)
• Quickly adjust speed limits
• Improved background service
• More color customization
• Other minor improvements

"<b>Version 2.8 - Oct 21, 2011</b>"

• Quickly switch speed limits
• Share your location
• Support for 10-inch screens
• Featured apps section
• Fixed: Multiple bugs on Honeycomb
• Numerous minor tweaks

"<b>Version 2.7 - Jul 14, 2011</b>"

• Basic Honeycomb support
• Enable screen auto-rotation
• Maximum digital speedo limit
• Show additional data on the digital gauge
• Updated speed limit presets
• Lots of minor improvements

"<b>Version 2.6 - Mar 24, 2011</b>"

• Digital speedo gauge
• Improved GPX export
• Vibration alert
• Reverse landscape mode (Android 2.3)
• Disable street address
• Many bug fixes and UI tweaks

"<b>Version 2.5 - Nov 9, 2010</b>"

• 0 to 100 km/h time
• Improved car acceleration modes
• The app now restores the recording state
• Fixed: Alert sound bug on some phones

"<b>Version 2.4 - Oct 8, 2010</b>"

• 0 to 60 mph time
• Quarter mile time
• Stop/Start recording data
• Quickly reset odometer and max speed
• Reset colors to default values

"<b>Version 2.3 - Sep 25, 2010</b>"

• Street address
• Position accuracy indicator
• Number of sats used in fix
• Advanced logging settings"</string>
    <string name="visit_our_blog">Visit our blog</string>
    <string name="how_the_widget_works">How the widget works</string>
    <string name="widget_information">The widget works in conjunction with the app in that it does not have its own configurable settings. Instead, it uses the current preferences set in SpeedView, such as display units, your current speed limit, track logging options, etc. The widget saves the data when you stop it by tapping on it, or when you start the application while the widget is running.</string>
    <string name="resetting_settings">Resetting settings</string>
    <string name="reset_information">You can reset your settings via the Options menu in the Settings screen.</string>
</resources>