<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_menu_always_landscape_portrait" android:id="@id/orientation" android:title="@string/orientation">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/portrait" android:title="@string/portrait" />
                <item android:id="@id/landscape" android:title="@string/landscape" />
                <item android:id="@id/reverse_landscape" android:title="@string/reverse_landscape" />
            </group>
        </menu>
    </item>
    <item android:icon="@drawable/menu_speedlimit_icon" android:id="@id/speed_limit" android:title="@string/speed_limit">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/urban_area" android:title="@string/urban_area" />
                <item android:id="@id/highway" android:title="@string/highway" />
                <item android:id="@id/freeway" android:title="@string/freeway" />
            </group>
            <item android:id="@id/turn_off" android:title="@string/turn_off" />
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_view" android:id="@id/dashboard" android:title="@string/dashboard">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/startup" android:title="@string/startup" />
                <item android:id="@id/main" android:title="@string/main" />
                <item android:id="@id/compass" android:title="@string/compass" />
                <item android:id="@id/hud_view" android:title="@string/hud_view" />
                <item android:id="@id/zoom_view" android:visible="false" android:title="@string/zoom_view" />
                <item android:id="@id/advanced" android:title="@string/advanced" />
            </group>
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_revert" android:id="@id/clear_data" android:title="@string/clear_data">
        <menu>
            <item android:id="@id/reset_odometer_time" android:title="@string/odometer_time" />
            <item android:id="@id/reset_max_speed" android:title="@string/max_speed" />
            <item android:id="@id/reset_accl_times" android:title="@string/accl_times" />
            <item android:id="@id/clear_graph" android:title="@string/graph" />
            <item android:id="@id/clear_all" android:title="@string/all" />
        </menu>
    </item>
    <item android:icon="@drawable/menu_minimize_icon" android:id="@id/minimize" android:title="@string/minimize" />
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/exit" android:visible="false" android:title="@string/exit" />
    <item android:icon="@android:drawable/ic_menu_share" android:enabled="false" android:id="@id/share_location" android:title="@string/share_location" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/settings" android:title="@string/settings" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/help" android:title="@string/help" />
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@id/about" android:title="@string/about" />
    <item android:icon="@android:drawable/ic_menu_recent_history" android:id="@id/changelog" android:title="@string/changelog" />
    <item android:icon="@drawable/menu_featured_icon" android:id="@id/featured_apps" android:title="@string/featured_apps" />
    <item android:icon="@drawable/menu_upgrade_icon" android:id="@id/upgrade_to_pro" android:visible="false" android:title="@string/upgrade_to_pro" />
</menu>
