<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="24.0dip">
        <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ffcccccc" android:id="@id/update_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/version" android:layout_centerVertical="true" />
        <View android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:text="@string/about_this_release" />
            <TextView android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/release_info" />
            <View android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:background="#99000000" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whats_new" />
            <TextView android:textColor="#ffffffff" android:id="@id/whats_new_info" android:background="#99000000" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whats_new_info_pro" />
            <View android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:text="@string/how_the_widget_works" />
            <TextView android:textColor="#ffffffff" android:id="@id/whats_new_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/widget_information" />
            <View android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:background="#99000000" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/resetting_settings" />
            <TextView android:textColor="#ffffffff" android:id="@id/whats_new_info" android:background="#99000000" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/reset_information" />
        </LinearLayout>
    </ScrollView>
    <View android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center_horizontal" android:background="#ff333333" android:paddingTop="10.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/update_start_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="140.0dip" android:text="@string/ok" android:layout_centerHorizontal="true" />
    </LinearLayout>
</LinearLayout>
