<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/help_view" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/help_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:src="@android:drawable/ic_dialog_info" />
            <TextView android:textSize="26.0sp" android:textColor="#ffffffff" android:id="@id/help_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/help_title" android:layout_toRightOf="@id/help_image" />
            <TextView android:textColor="#ffffffff" android:id="@id/help_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/help_text" android:layout_below="@id/help_title" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/help_buttons_layout" android:background="#ff333333" android:paddingTop="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/help_ok_button" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="120.0dip" android:text="@string/ok" />
        <Button android:id="@id/help_faq_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:minWidth="120.0dip" android:text="@string/read_the_faq" />
    </LinearLayout>
    <ScrollView android:id="@id/faq_view" android:padding="15.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/faq_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:src="@android:drawable/ic_dialog_info" />
            <TextView android:textSize="26.0sp" android:textColor="#ffffffff" android:id="@id/faq_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/faq_title" android:layout_toRightOf="@id/faq_image" />
            <TextView android:textColor="#ffffffff" android:id="@id/faq_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/startup_text_pro" android:layout_below="@id/faq_title" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/faq_button_layout" android:background="#ff333333" android:paddingTop="10.0dip" android:paddingBottom="6.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/faq_back_button" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="120.0dip" android:text="@string/back" />
    </LinearLayout>
</LinearLayout>
