<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="26.0sp" android:textColor="#ffffffff" android:id="@id/changelog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/changelog_title" />
            <TextView android:textColor="#ffffffff" android:id="@id/changelog_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/changelog_text_pro" android:layout_below="@id/changelog_title" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:background="#ff333333" android:paddingTop="10.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/changelog_ok_button" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="120.0dip" android:text="@string/ok" />
        <Button android:id="@id/changelog_blog_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:minWidth="120.0dip" android:text="@string/visit_our_blog" />
    </LinearLayout>
</LinearLayout>
